package org.rcdukes.action;

import io.vertx.core.json.JsonObject;
import rx.Observable;

/**
 * start light observer
 */
public class StartLightObserver {

    public Observable<JsonObject> observe(JsonObject startLightDetection) {
        return Observable.empty();
    }


}
